--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=/home/noe/.netbeans/8.2/build.properties
+user.properties.file=/home/eon/.netbeans/8.2/build.properties
